# w3-solana

./: .gitignore  .gitpod.yml  Cargo.toml  LICENSE  README.md  makefile  w3-uploader.yaml
docker/: Dockerfile
gateway/: gateway  gateway.yaml  go.mod  main.go
gateway/cmd/: root.go  start.go
gateway/pkg/handler/: handler.go
gateway/pkg/solana/: client.go  client_test.go  nameconfig.go  page_content.go
site/: index.html  package.json  pnpm-lock.yaml
site/src/: App.tsx
site/static/: hello.js  style.css
src/: lib.rs  pda_helper.rs
vite-project/: package.json  pnpm-lock.yaml  vite.config.ts
vite-project/src/: App.tsx
w3/: Cargo.toml  tools.md
w3-uploader/: Cargo.toml
w3-uploader/src/: client.rs  lib.rs  sdk.rs  solana_trait.rs  test.rs
w3/src/: entrypoint.rs  instruction.rs  lib.rs  process.rs
w3/src/process/: config.rs  mod.rs  process.rs  trunk.rs
